<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rec_item_seg_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:contentDescription="@string/cont_desc_condition_toggle">

    <ImageView
        android:id="@+id/rec_seg_img_state"
        android:layout_width="8dp"
        android:layout_height="64dp"
        android:background="@color/black"
        android:contentDescription="@string/cont_desc_condition_indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rec_seg_tv_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@tools:sample/lorem[1]"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rec_seg_img_state"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rec_seg_tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@tools:sample/lorem[4]"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rec_seg_btn_repeat"
        app:layout_constraintStart_toEndOf="@+id/rec_seg_tv_timestamp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/rec_seg_btn_repeat"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/cont_desc_loop_btn"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_repeat_24"
        app:tint="?android:attr/textColorSecondary" />

</androidx.constraintlayout.widget.ConstraintLayout>